--- a/css/stock.css
+++ b/css/stock.css
@@ -4,7 +4,7 @@ html {
 }
 body {
   margin: 0px;
-  background: #fafafa;
+  background: #212121;
   font-family: arial,sans-serif;
   overflow:hidden;
 }
